# Mac-letterhead

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_MCP.md  REGISTRY_PUBLISHING.md  package-lock.json  package.json  pyproject.toml  server.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  publish-mcp-registry.yml  publish.yml
dxt/: .mcpbignore  mac-letterhead-0.14.3.mcpb  manifest.json  pyproject.toml  server.py
letterhead_pdf/: __init__.py  exceptions.py  installer.py  main.py  markdown_processor.py  mcp_server.py  pdf_merger.py
letterhead_pdf/installation/: applescript_generator.py  droplet_builder.py  macos_integration.py
letterhead_pdf/installation/templates/: unified_droplet.applescript
letterhead_pdf/markdown/: __init__.py  flowable_builder.py  html_cleaner.py  pdf_analyzer.py  processor.py
letterhead_pdf/markdown/backends/: __init__.py  reportlab_backend.py  weasyprint_backend.py
letterhead_pdf/resources/: Mac-letterhead.icns  defaults.css
resources/: Mac-letterhead.icns
scripts/: create_letterhead_droplet.sh  letterhead_fixed.applescript
tests/: test_gfm_features.py  test_list_rendering.py  test_security.py
tools/: requirements.txt  version-manager.mjs
